hphp/hack/test/typecheck/static_var_no_generic.php.exp
File "static_var_no_generic.php", line 6, characters 24-34:
Invalid expression in constant initializer (Parsing[1002])
